<resources>
    <string name="app_name">Socialize</string>
    <string name="socialize">SOCIALIZE</string>
    <string name="register">Register</string>
    <string name="login">LogIn</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="password">Password</string>
    <string name="have_an_account">have an account?</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone number</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dp">dp</string>
    <string name="add_dp">add DP</string>
    <string name="bio">Bio</string>
    <string name="dob">DOB</string>
    <string name="upload">Upload</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addimage">addImage</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="add_image">Add Image</string>
    <string name="_0_likes">0 likes</string>
    <string name="user_name">userProfile name</string>
    <string name="todo">TODO</string>
    <string name="like">like</string>
    <string name="comments">comments</string>
    <string name="image">image</string>
    <string name="profile_of_liked_users">Profile of Liked Users</string>
    <string name="saved_post">Saved post</string>
    <string name="search_for_users">Search for users</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
</resources>