<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="40dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/socialize"
        android:textColor="#689F38"
        android:textSize="24sp" />

    <Button
        android:id="@+id/BtnRegisterNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E8EAEF"
        android:text="@string/register"
        android:textColor="#0A49E8" />

    <Button
        android:id="@+id/btnLoginNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E8EAEF"
        android:text="@string/login"
        android:textColor="#0A49E8" />
</LinearLayout>