<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:orientation="vertical"
    app:cardCornerRadius="3dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp"
    tools:context=".ui.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/userDP"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_person_black_24"
                android:contentDescription="@string/dp"
                android:scaleType="centerCrop"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textColor="#000000" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:cropToPadding="false"
                android:src="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/locHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="TextView" />
        </LinearLayout>

        <ImageView
            android:id="@+id/postImg"
            android:layout_width="match_parent"
            android:layout_height="433dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_image_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/likesImg"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/like"
                android:src="@drawable/ic_likes_icon" />

            <ImageView
                android:id="@+id/comments"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/comments"
                android:src="@drawable/ic_baseline_comment_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/likesCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/_0_likes"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/description"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>